Updating credentials variables file

--- a/aws.credentials.rf.sample
+++ b/aws.credentials.rf.sample
@@ -1,8 +1,7 @@
 # This is a sample AWS credentials file. Update your access_key and secret_key accordingly.
 # Make a copy of this file and renate it to aws.credentials.rf
 
-provider "aws" {
-  region     = "us-west-2"
+awscredentials "awscredentials" {
   access_key = "my-access-key"
   secret_key = "my-secret-key"
 }
