# Update variables string types

--- a/aws.credentials.tf.sample
+++ b/aws.credentials.tf.sample
@@ -1,7 +1,14 @@
 # This is a sample AWS credentials file. Update your access_key and secret_key accordingly.
 # Make a copy of this file and renate it to aws.credentials.rf
 
-awscredentials "awscredentials" {
-  access_key = "my-access-key"
-  secret_key = "my-secret-key"
+variable "aws_credentials_access_key" {
+  description = "access_key"
+  type        = string
+  default     = "my-access-key"
+}
+
+variable "aws_credentials_secret_key" {
+  description = "secret_key"
+  type        = string
+  default     = "my-secret-key"
 }
